iter24: Добавлен инкремент 24
