# swagger/swagger.json
@@ -58,6 +58,52 @@
                 }
             }
         },
+        "/api/internal/stats": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Возвращает количество URL и пользователей в сервисе",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Получить статистику",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "IP адрес клиента",
+                        "name": "X-Real-IP",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Stats"
+                        }
+                    },
+                    "403": {
+                        "description": "Доступ запрещен",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/shorten": {
             "post": {
                 "description": "Создает короткую версию переданного URL (JSON формат)",
@@ -162,7 +208,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Пользователь"
+                    "User"
                 ],
                 "summary": "Получить URL пользователя",
                 "responses": {
@@ -176,7 +222,10 @@
                         }
                     },
                     "204": {
-                        "description": "Нет сохраненных URL"
+                        "description": "Нет сохраненных URL",
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     "401": {
                         "description": "Пользователь не авторизован",
@@ -197,7 +246,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Пользователь"
+                    "User"
                 ],
                 "summary": "Удалить URL пользователя",
                 "parameters": [
@@ -216,7 +265,10 @@
                 ],
                 "responses": {
                     "202": {
-                        "description": "Запрос на удаление принят"
+                        "description": "Запрос на удаление принят",
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     "400": {
                         "description": "Неверный формат запроса",
@@ -231,12 +283,15 @@
             "get": {
                 "description": "Проверяет соединение с базой данных",
                 "tags": [
-                    "Сервис"
+                    "Storage"
                 ],
                 "summary": "Проверка состояния",
                 "responses": {
                     "200": {
-                        "description": "База данных доступна"
+                        "description": "База данных доступна",
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     "500": {
                         "description": "База данных недоступна",
@@ -289,7 +344,8 @@
             "type": "object",
             "properties": {
                 "url": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://mail.ru/"
                 }
             }
         },
@@ -298,10 +354,12 @@
             "type": "object",
             "properties": {
                 "correlation_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "eefbcef4-3940-5a38-b2f0-877152a6d471"
                 },
                 "original_url": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://mail.ru/"
                 }
             }
         },
@@ -310,7 +368,8 @@
             "type": "object",
             "properties": {
                 "result": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://localhost:8080/614904e8-28e8-5fec-aef9-56c6713e3107"
                 }
             }
         },
@@ -319,10 +378,12 @@
             "type": "object",
             "properties": {
                 "correlation_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "eefbcef4-3940-5a38-b2f0-877152a6d471"
                 },
                 "short_url": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://localhost:8080/614904e8-28e8-5fec-aef9-56c6713e3107"
                 }
             }
         },
@@ -331,10 +392,26 @@
             "type": "object",
             "properties": {
                 "original_url": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://mail.ru/"
                 },
                 "short_url": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://localhost:8080/614904e8-28e8-5fec-aef9-56c6713e3107"
+                }
+            }
+        },
+        "models.Stats": {
+            "description": "Информация о кол-ве пользователей в системе и сокращенных URL",
+            "type": "object",
+            "properties": {
+                "urls": {
+                    "type": "integer",
+                    "example": 10
+                },
+                "users": {
+                    "type": "integer",
+                    "example": 5
                 }
             }
         }
